fix(css): make support cards square (280x280) for readable text
v1.0.21

--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@ a:hover {
 
 .it-service-card img {
     width: 100%;
-    height: 200px;
+    height: 280px;
     object-fit: cover;
     display: block;
 }
